Added Button and Field UI components and finished basic auth page structure. Also fixed router.

--- a/src/Components/page/auth/main.module.css
+++ b/src/Components/page/auth/main.module.css
@@ -54,3 +54,22 @@
   letter-spacing: 0.5px;
   line-height: 1.7;
 }
+
+@media (max-width: 767px) {
+  .auth_block, .reg_block {
+    flex-basis: calc((100% - 50px) / 2);
+  }
+  .content_block {
+    flex-basis: 50px;
+    max-width: 50px;
+  }
+  .animation_container {
+    width: calc((100% - 50px) * 2 + 50px)
+  }
+  .animation_container.register {
+    transform: translateX(calc((-100% + 50px) / 2));
+  }
+  .title, .description {
+    display: none;
+  }
+}
