Added firebase deployment and task toggling logic + it's testing ui.

--- a/src/Components/page/tasks/header/main.module.css
+++ b/src/Components/page/tasks/header/main.module.css
@@ -25,6 +25,7 @@
 
 .control_item {
   height: 100%;
+  background: transparent;
   border-left: 1px solid var(--white_2);
   display: flex;
   flex-wrap: wrap;
