--- a/src/Components/page/tasks/main.module.css
+++ b/src/Components/page/tasks/main.module.css
@@ -14,4 +14,28 @@
 
 .body {
   flex: 1 0 auto;
+  position: relative;
 }
+
+.controls {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.control_item {
+  height: 100%;
+  background: transparent;
+  border-left: 1px solid var(--white_2);
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  padding: 0 30px;
+  cursor: pointer;
+  transition: opacity 350ms;
+}
+
+.control_item:hover, .control_item:focus {
+  opacity: 0.5;
+}
+
