--- a/src/Components/page/tasks/main.module.css
+++ b/src/Components/page/tasks/main.module.css
@@ -2,11 +2,10 @@
   width: 100%;
   height: 100%;
   display: flex;
-  flex-wrap: wrap;
 }
 
 .content {
-  flex: 1 0 auto;
+  flex: 1 1 auto;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -15,6 +14,7 @@
 .body {
   flex: 1 0 auto;
   position: relative;
+  overflow: auto;
 }
 
 .controls {
@@ -23,6 +23,7 @@
 }
 
 .control_item {
+  position: relative;
   height: 100%;
   background: transparent;
   border-left: 1px solid var(--white_2);
@@ -32,10 +33,16 @@
   justify-content: center;
   padding: 0 30px;
   cursor: pointer;
-  transition: opacity 350ms;
 }
 
 .control_item:hover, .control_item:focus {
-  opacity: 0.5;
 }
 
+.page_title {
+  padding: 30px 60px;
+  margin-bottom: 30px;
+}
+
+.tasks_wrapper {
+  padding: 0 30px;
+}
