Added escape handling on popover and little changes into tasks page.

--- a/src/Components/page/tasks/add/main.module.css
+++ b/src/Components/page/tasks/add/main.module.css
@@ -18,10 +18,12 @@
 
 .form {
   width: 100%;
+  max-width: 500px;
 }
 
 .control_block {
   text-align: center;
+  margin-top: 60px;
 }
 
 .or_text {
