--- a/src/Components/ui/tooltip/main.module.css
+++ b/src/Components/ui/tooltip/main.module.css
@@ -36,7 +36,7 @@
   height: 3px;
   top: -3px;
   left: calc(50% - 1.5px);
-  border-bottom: 3px solid;
+  border-bottom: 3px solid rgba(0,0,0,0.7);
   border-left: 3px solid transparent;
   border-right: 3px solid transparent;
 }
